--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -44,18 +44,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn==0.23.1\n",
+      "  Using cached scikit-learn-0.23.1.tar.gz (7.2 MB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: still running...\n",
+      "  Installing build dependencies: finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × pip subprocess to install build dependencies did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [72 lines of output]\n",
+      "      Ignoring numpy: markers 'python_version == \"3.6\" and platform_system != \"AIX\" and platform_python_implementation == \"CPython\"' don't match your environment\n",
+      "      Ignoring numpy: markers 'python_version == \"3.6\" and platform_system != \"AIX\" and platform_python_implementation != \"CPython\"' don't match your environment\n",
+      "      Ignoring numpy: markers 'python_version == \"3.7\" and platform_system != \"AIX\"' don't match your environment\n",
+      "      Ignoring numpy: markers 'python_version == \"3.6\" and platform_system == \"AIX\"' don't match your environment\n",
+      "      Ignoring numpy: markers 'python_version == \"3.7\" and platform_system == \"AIX\"' don't match your environment\n",
+      "      Ignoring numpy: markers 'python_version >= \"3.8\" and platform_system == \"AIX\"' don't match your environment\n",
+      "      Collecting setuptools\n",
+      "        Using cached setuptools-75.1.0-py3-none-any.whl.metadata (6.9 kB)\n",
+      "      Collecting wheel\n",
+      "        Using cached wheel-0.44.0-py3-none-any.whl.metadata (2.3 kB)\n",
+      "      Collecting Cython>=0.28.5\n",
+      "        Using cached Cython-3.0.11-cp312-cp312-win_amd64.whl.metadata (3.2 kB)\n",
+      "      Collecting numpy==1.17.3\n",
+      "        Using cached numpy-1.17.3.zip (6.4 MB)\n",
+      "        Preparing metadata (setup.py): started\n",
+      "        Preparing metadata (setup.py): finished with status 'done'\n",
+      "      Collecting scipy>=0.19.1\n",
+      "        Using cached scipy-1.14.1-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "      INFO: pip is looking at multiple versions of scipy to determine which version is compatible with other requirements. This could take a while.\n",
+      "        Using cached scipy-1.14.0-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "        Using cached scipy-1.13.1-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "        Using cached scipy-1.13.0-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "        Using cached scipy-1.12.0-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "        Using cached scipy-1.11.4-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "        Using cached scipy-1.11.3-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "        Using cached scipy-1.11.2-cp312-cp312-win_amd64.whl.metadata (59 kB)\n",
+      "      INFO: pip is still looking at multiple versions of scipy to determine which version is compatible with other requirements. This could take a while.\n",
+      "        Using cached scipy-1.11.1.tar.gz (56.0 MB)\n",
+      "        Installing build dependencies: started\n",
+      "        Installing build dependencies: finished with status 'done'\n",
+      "        Getting requirements to build wheel: started\n",
+      "        Getting requirements to build wheel: finished with status 'done'\n",
+      "        Installing backend dependencies: started\n",
+      "        Installing backend dependencies: finished with status 'done'\n",
+      "        Preparing metadata (pyproject.toml): started\n",
+      "        Preparing metadata (pyproject.toml): finished with status 'error'\n",
+      "        error: subprocess-exited-with-error\n",
+      "      \n",
+      "        × Preparing metadata (pyproject.toml) did not run successfully.\n",
+      "        │ exit code: 1\n",
+      "        ╰─> [21 lines of output]\n",
+      "            + meson setup C:\\Users\\diego\\AppData\\Local\\Temp\\pip-install-g1zbil9l\\scipy_3283bfdb7b01460ba00b0d0ced76bbed C:\\Users\\diego\\AppData\\Local\\Temp\\pip-install-g1zbil9l\\scipy_3283bfdb7b01460ba00b0d0ced76bbed\\.mesonpy-tbcah8__\\build -Dbuildtype=release -Db_ndebug=if-release -Db_vscrt=md --native-file=C:\\Users\\diego\\AppData\\Local\\Temp\\pip-install-g1zbil9l\\scipy_3283bfdb7b01460ba00b0d0ced76bbed\\.mesonpy-tbcah8__\\build\\meson-python-native-file.ini\n",
+      "            The Meson build system\n",
+      "            Version: 1.5.1\n",
+      "            Source dir: C:\\Users\\diego\\AppData\\Local\\Temp\\pip-install-g1zbil9l\\scipy_3283bfdb7b01460ba00b0d0ced76bbed\n",
+      "            Build dir: C:\\Users\\diego\\AppData\\Local\\Temp\\pip-install-g1zbil9l\\scipy_3283bfdb7b01460ba00b0d0ced76bbed\\.mesonpy-tbcah8__\\build\n",
+      "            Build type: native build\n",
+      "            Project name: SciPy\n",
+      "            Project version: 1.11.1\n",
+      "            WARNING: Failed to activate VS environment: Could not parse vswhere.exe output\n",
+      "      \n",
+      "            ..\\..\\meson.build:1:0: ERROR: Unknown compiler(s): [['icl'], ['cl'], ['cc'], ['gcc'], ['clang'], ['clang-cl'], ['pgcc']]\n",
+      "            The following exception(s) were encountered:\n",
+      "            Running `icl \"\"` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "            Running `cl /?` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "            Running `cc --version` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "            Running `gcc --version` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "            Running `clang --version` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "            Running `clang-cl /?` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "            Running `pgcc --version` gave \"[WinError 2] The system cannot find the file specified\"\n",
+      "      \n",
+      "            A full log can be found at C:\\Users\\diego\\AppData\\Local\\Temp\\pip-install-g1zbil9l\\scipy_3283bfdb7b01460ba00b0d0ced76bbed\\.mesonpy-tbcah8__\\build\\meson-logs\\meson-log.txt\n",
+      "            [end of output]\n",
+      "      \n",
+      "        note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "      error: metadata-generation-failed\n",
+      "      \n",
+      "      × Encountered error while generating package metadata.\n",
+      "      ╰─> See above for output.\n",
+      "      \n",
+      "      note: This is an issue with the package mentioned above, not pip.\n",
+      "      hint: See above for details.\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: subprocess-exited-with-error\n",
+      "\n",
+      "× pip subprocess to install build dependencies did not run successfully.\n",
+      "│ exit code: 1\n",
+      "╰─> See above for output.\n",
+      "\n",
+      "note: This error originates from a subprocess, and is likely not a problem with pip.\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install scikit-learn==0.23.1"
+    "#!pip install scikit-learn==0.23.1\n",
+    "!pip install scikit-learn==0.23.1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'piplite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpiplite\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m piplite\u001b[38;5;241m.\u001b[39minstall([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpandas\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m piplite\u001b[38;5;241m.\u001b[39minstall([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'piplite'"
+     ]
+    }
+   ],
    "source": [
     "import piplite\n",
     "await piplite.install(['pandas'])\n",
@@ -474,7 +592,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here\n"
+    "# write your code here\n",
+    "clf2 = svm.SVC(kernel='linear')\n",
+    "clf2.fit(X_train, y_train)\n",
+    "yhat2 = clf2.predict(X_test)\n",
+    "\n",
+    "print(\"Avg F1-score: %.4f\" % f1_score(y_test, yhat2, average='weighted'))\n",
+    "\n",
+    "print(\"Jaccard score: %.4f\" % jaccard_score(y_test, yhat2,pos_label=2))"
    ]
   },
   {
@@ -519,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
