--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,47 +53,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import piplite\n",
-    "await piplite.install(['pandas'])\n",
-    "await piplite.install(['matplotlib'])\n",
-    "await piplite.install(['numpy'])\n",
-    "await piplite.install(['scikit-learn'])\n",
-    "await piplite.install(['scipy'])\n"
+    "# import piplite\n",
+    "# await piplite.install(['pandas'])\n",
+    "# await piplite.install(['matplotlib'])\n",
+    "# await piplite.install(['numpy'])\n",
+    "# await piplite.install(['scikit-learn'])\n",
+    "# await piplite.install(['scipy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pylab as pl\n",
+    "# import pylab as pl\n",
     "import numpy as np\n",
-    "import scipy.optimize as opt\n",
-    "from sklearn import preprocessing\n",
+    "# import scipy.optimize as opt\n",
+    "# from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "%matplotlib inline \n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyodide.http import pyfetch\n",
+    "# from pyodide.http import pyfetch\n",
     "\n",
-    "async def download(url, filename):\n",
-    "    response = await pyfetch(url)\n",
-    "    if response.status == 200:\n",
-    "        with open(filename, \"wb\") as f:\n",
-    "            f.write(await response.bytes())\n"
+    "# async def download(url, filename):\n",
+    "#     response = await pyfetch(url)\n",
+    "#     if response.status == 200:\n",
+    "#         with open(filename, \"wb\") as f:\n",
+    "#             f.write(await response.bytes())"
    ]
   },
   {
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -141,8 +142,7 @@
    },
    "outputs": [],
    "source": [
-    "#Click here and press Shift+Enter\n",
-    "path=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-ML0101EN-SkillsNetwork/labs/Module%203/data/cell_samples.csv\""
+    "path = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-ML0101EN-SkillsNetwork/labs/Module%203/data/cell_samples.csv\""
    ]
   },
   {
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
-    "await download(path, \"cell_samples.csv\")"
+    "# await download(path, \"cell_samples.csv\")"
    ]
   },
   {
@@ -179,7 +179,8 @@
    },
    "outputs": [],
    "source": [
-    "cell_df = pd.read_csv(\"cell_samples.csv\")\n",
+    "cell_df = pd.read_csv(path)\n",
+    "\n",
     "cell_df.head()"
    ]
   },
@@ -200,9 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = cell_df[cell_df['Class'] == 4][0:50].plot(kind='scatter', x='Clump', y='UnifSize', color='DarkBlue', label='malignant');\n",
-    "cell_df[cell_df['Class'] == 2][0:50].plot(kind='scatter', x='Clump', y='UnifSize', color='Yellow', label='benign', ax=ax);\n",
-    "plt.show()"
+    "ax = cell_df[cell_df['Class'] == 4][0:50].plot(kind = 'scatter', x = 'Clump', y = 'UnifSize', color = 'DarkBlue', label = 'malignant')\n",
+    "cell_df[cell_df['Class'] == 2][0:50].plot(kind = 'scatter', x = 'Clump', y = 'UnifSize', color = 'Yellow', label = 'benign', ax = ax)"
    ]
   },
   {
@@ -241,8 +241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_df = cell_df[pd.to_numeric(cell_df['BareNuc'], errors='coerce').notnull()]\n",
+    "cell_df = cell_df[pd.to_numeric(cell_df['BareNuc'], errors = 'coerce').notnull()]\n",
     "cell_df['BareNuc'] = cell_df['BareNuc'].astype('int')\n",
+    "\n",
     "cell_df.dtypes"
    ]
   },
@@ -254,6 +255,7 @@
    "source": [
     "feature_df = cell_df[['Clump', 'UnifSize', 'UnifShape', 'MargAdh', 'SingEpiSize', 'BareNuc', 'BlandChrom', 'NormNucl', 'Mit']]\n",
     "X = np.asarray(feature_df)\n",
+    "\n",
     "X[0:5]"
    ]
   },
@@ -270,8 +272,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_df['Class'] = cell_df['Class'].astype('int')\n",
     "y = np.asarray(cell_df['Class'])\n",
+    "\n",
     "y [0:5]"
    ]
   },
@@ -295,7 +297,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.2, random_state=4)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 4)\n",
+    "\n",
     "print ('Train set:', X_train.shape,  y_train.shape)\n",
     "print ('Test set:', X_test.shape,  y_test.shape)"
    ]
@@ -330,7 +333,9 @@
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
-    "clf = svm.SVC(kernel='rbf')\n",
+    "\n",
+    "clf = svm.SVC(kernel = 'rbf')\n",
+    "\n",
     "clf.fit(X_train, y_train) "
    ]
   },
@@ -348,6 +353,7 @@
    "outputs": [],
    "source": [
     "yhat = clf.predict(X_test)\n",
+    "\n",
     "yhat [0:5]"
    ]
   },
@@ -360,49 +366,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
     "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_confusion_matrix(cm, classes,\n",
-    "                          normalize=False,\n",
-    "                          title='Confusion matrix',\n",
-    "                          cmap=plt.cm.Blues):\n",
+    "                          normalize = False,\n",
+    "                          title = 'Confusion matrix',\n",
+    "                          cmap = plt.cm.Blues):\n",
     "    \"\"\"\n",
     "    This function prints and plots the confusion matrix.\n",
-    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    Normalization can be applied by setting `normalize = True`.\n",
     "    \"\"\"\n",
     "    if normalize:\n",
-    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "        cm = cm.astype('float') / cm.sum(axis = 1)[:, np.newaxis]\n",
     "        print(\"Normalized confusion matrix\")\n",
     "    else:\n",
     "        print('Confusion matrix, without normalization')\n",
     "\n",
     "    print(cm)\n",
     "\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.imshow(cm, interpolation = 'nearest', cmap = cmap)\n",
     "    plt.title(title)\n",
     "    plt.colorbar()\n",
     "    tick_marks = np.arange(len(classes))\n",
-    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.xticks(tick_marks, classes, rotation = 45)\n",
     "    plt.yticks(tick_marks, classes)\n",
     "\n",
     "    fmt = '.2f' if normalize else 'd'\n",
-    "    thresh = cm.max() / 2.\n",
+    "    thresh = cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
     "        plt.text(j, i, format(cm[i, j], fmt),\n",
-    "                 horizontalalignment=\"center\",\n",
-    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "                 horizontalalignment = \"center\",\n",
+    "                 color = \"white\" if cm[i, j] > thresh else \"black\")\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.ylabel('True label')\n",
@@ -416,14 +423,15 @@
    "outputs": [],
    "source": [
     "# Compute confusion matrix\n",
-    "cnf_matrix = confusion_matrix(y_test, yhat, labels=[2,4])\n",
-    "np.set_printoptions(precision=2)\n",
+    "cnf_matrix = confusion_matrix(y_test, yhat, labels = [2, 4])\n",
+    "\n",
+    "np.set_printoptions(precision = 2)\n",
     "\n",
     "print (classification_report(y_test, yhat))\n",
     "\n",
     "# Plot non-normalized confusion matrix\n",
     "plt.figure()\n",
-    "plot_confusion_matrix(cnf_matrix, classes=['Benign(2)','Malignant(4)'],normalize= False,  title='Confusion matrix')"
+    "plot_confusion_matrix(cnf_matrix, classes = ['Benign(2)', 'Malignant(4)'], normalize = False, title = 'Confusion matrix')"
    ]
   },
   {
@@ -440,7 +448,8 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score\n",
-    "f1_score(y_test, yhat, average='weighted') "
+    "\n",
+    "f1_score(y_test, yhat, average = 'weighted') "
    ]
   },
   {
@@ -457,7 +466,8 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import jaccard_score\n",
-    "jaccard_score(y_test, yhat,pos_label=2)"
+    "\n",
+    "jaccard_score(y_test, yhat, pos_label = 2)"
    ]
   },
   {
@@ -474,7 +484,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here\n"
+    "clf_linear = svm.SVC(kernel = 'linear')\n",
+    "\n",
+    "clf_linear.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_linear = clf_linear.predict(X_test)\n",
+    "\n",
+    "clf_linear_f1 = f1_score(y_test, y_pred_linear, average = 'weighted')\n",
+    "clf_linear_jac = jaccard_score(y_test, y_pred_linear, pos_label = 2)\n",
+    "\n",
+    "print('SVM linear F1 score:', clf_linear_f1)\n",
+    "print('SVM linear Jaccard score:', clf_linear_jac)"
    ]
   },
   {
@@ -519,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
