--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -44,11 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\b-^C\n",
+      "\u001b[?25canceled\n",
+      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 24.2 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install scikit-learn==0.23.1"
+    "%pip install scikit-learn==0.23.1"
    ]
   },
   {
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -164,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await download(path, \"cell_samples.csv\")"
+    "await download(\"/Users/brunoaugusto/Library/CloudStorage/OneDrive-Pessoal/01.Bruno/01.Ironhack learning Mat/IronHack/Git_Bruno_Repo/lab-svm/cell_samples.csv\", \"cell_samples.csv\")\n"
    ]
   },
   {
@@ -474,7 +487,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here\n"
+    "# write your code here\n",
+    "\n",
+    "clf2 = svm.SVC(kernel='linear')\n",
+    "clf2.fit(X_train, y_train) \n",
+    "yhat2 = clf2.predict(X_test)\n",
+    "print(\"Avg F1-score: %.4f\" % f1_score(y_test, yhat2, average='weighted'))\n",
+    "print(\"Jaccard score: %.4f\" % jaccard_score(y_test, yhat2,pos_label=2))\n",
+    "\n"
    ]
   },
   {
@@ -519,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
