--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -53,21 +53,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'piplite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpiplite\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m piplite\u001b[38;5;241m.\u001b[39minstall([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpandas\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m piplite\u001b[38;5;241m.\u001b[39minstall([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'piplite'"
+     ]
+    }
+   ],
    "source": [
-    "import piplite\n",
-    "await piplite.install(['pandas'])\n",
-    "await piplite.install(['matplotlib'])\n",
-    "await piplite.install(['numpy'])\n",
-    "await piplite.install(['scikit-learn'])\n",
-    "await piplite.install(['scipy'])\n"
+    "# import piplite\n",
+    "# await piplite.install(['pandas'])\n",
+    "# await piplite.install(['matplotlib'])\n",
+    "# await piplite.install(['numpy'])\n",
+    "# await piplite.install(['scikit-learn'])\n",
+    "# await piplite.install(['scipy'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,17 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyodide'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyodide\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhttp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyfetch\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdownload\u001b[39m(url, filename):\n\u001b[1;32m      4\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m pyfetch(url)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyodide'"
+     ]
+    }
+   ],
    "source": [
-    "from pyodide.http import pyfetch\n",
+    "# from pyodide.http import pyfetch\n",
     "\n",
-    "async def download(url, filename):\n",
-    "    response = await pyfetch(url)\n",
-    "    if response.status == 200:\n",
-    "        with open(filename, \"wb\") as f:\n",
-    "            f.write(await response.bytes())\n"
+    "# async def download(url, filename):\n",
+    "#     response = await pyfetch(url)\n",
+    "#     if response.status == 200:\n",
+    "#         with open(filename, \"wb\") as f:\n",
+    "#             f.write(await response.bytes())\n"
    ]
   },
   {
@@ -505,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
