--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +57,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import piplite\n",
-    "await piplite.install(['pandas'])\n",
-    "await piplite.install(['matplotlib'])\n",
-    "await piplite.install(['numpy'])\n",
-    "await piplite.install(['scikit-learn'])\n",
-    "await piplite.install(['scipy'])\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyodide.http import pyfetch\n",
+    "#from pyodide.http import pyfetch\n",
     "\n",
     "async def download(url, filename):\n",
     "    response = await pyfetch(url)\n",
@@ -131,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -164,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await download(path, \"cell_samples.csv\")"
+    "download(path, \"cell_samples.csv\")"
    ]
   },
   {
@@ -179,7 +174,7 @@
    },
    "outputs": [],
    "source": [
-    "cell_df = pd.read_csv(\"cell_samples.csv\")\n",
+    "cell_df = pd.read_csv(\"./cell_samples.csv\")\n",
     "cell_df.head()"
    ]
   },
@@ -360,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +469,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here\n"
+    "clfL = svm.SVC(kernel='linear')\n",
+    "clfL.fit(X_train, y_train) \n",
+    "yhatL = clfL.predict(X_test)\n",
+    "\n",
+    "print(\"Avg F1-score: %.4f\" % f1_score(y_test, yhatL, average='weighted'))\n",
+    "print(\"Jaccard score: %.4f\" % jaccard_score(y_test, yhatL,pos_label=2))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -505,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
