--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -164,7 +164,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await download(path, \"cell_samples.csv\")"
+    "import requests\n",
+    "\n",
+    "# Download the file\n",
+    "response = requests.get(path)\n",
+    "\n",
+    "# Save the file\n",
+    "with open('cell_samples.csv', 'wb') as file:\n",
+    "    file.write(response.content)\n",
+    "\n",
+    "print(\"File downloaded successfully!\")\n",
+    "filename = \"cell_samples.csv\""
    ]
   },
   {
@@ -179,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "cell_df = pd.read_csv(\"cell_samples.csv\")\n",
+    "cell_df = pd.read_csv(filename)\n",
     "cell_df.head()"
    ]
   },
@@ -474,7 +484,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here\n"
+    "# write your code here\n",
+    "clf2 = svm.SVC(kernel='linear')\n",
+    "clf2.fit(X_train, y_train) \n",
+    "yhat2 = clf2.predict(X_test)\n",
+    "print(\"Avg F1-score: %.4f\" % f1_score(y_test, yhat2, average='weighted'))\n",
+    "print(\"Jaccard score: %.4f\" % jaccard_score(y_test, yhat2,pos_label=2))"
    ]
   },
   {
@@ -519,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
