--- a/lab-svm.ipynb
+++ b/lab-svm.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -164,6 +164,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "\n",
+    "# Specify the file URL\n",
+    "path = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-ML0101EN-SkillsNetwork/labs/Module%203/data/cell_samples.csv\"\n",
+    "\n",
+    "# Download the file\n",
+    "response = requests.get(path)\n",
+    "with open(\"cell_samples.csv\", \"wb\") as file:\n",
+    "    file.write(response.content)\n",
+    "\n",
+    "print(\"File downloaded as cell_samples.csv\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "await download(path, \"cell_samples.csv\")"
    ]
   },
@@ -360,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,11 +491,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your code here\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Example data\n",
+    "X = [[1, 2], [2, 3], [3, 4], [4, 5], [5, 6]]\n",
+    "y = [0, 1, 0, 1, 0]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here\n"
+    "from sklearn import svm\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf_linear = svm.SVC(kernel='linear')\n",
+    "\n",
+    "clf_linear.fit(X_train, y_train)\n",
+    "\n",
+    "yhat_linear = clf_linear.predict(X_test)\n",
+    "\n",
+    "accuracy_linear = accuracy_score(y_test, yhat_linear)\n",
+    "\n",
+    "\n",
+    "print(\"Accuracy with linear kernel:\", accuracy_linear)\n"
    ]
   },
   {
@@ -505,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
